--- a/workshops.adoc
+++ b/workshops.adoc
@@ -249,6 +249,39 @@ $ kubectl --kubeconfig="${HOME}"/.kube/kubeconfig-spring-cloud.yml get pods
 $ kubectl --kubeconfig="${HOME}"/.kube/kubeconfig-spring-cloud.yml logs spring-loves-k8s-64cc4dd87c-qvv7b
 ```
 
+== Create roles for the config watcher
+
+```bash
+$ cat > ./k8s/roles.yml << EOL
+kind: Role
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  namespace: spring-cloud
+  name: namespace-reader
+rules:
+  - apiGroups: ["", "extensions", "apps"]
+    resources: ["configmaps", "pods", "services", "endpoints", "secrets"]
+    verbs: ["get", "list", "watch"]
+
+---
+
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: namespace-reader-binding
+  namespace: spring-cloud
+subjects:
+- kind: ServiceAccount
+  name: default
+  apiGroup: ""
+roleRef:
+  kind: Role
+  name: namespace-reader
+  apiGroup: ""
+EOL
+$ kubectl apply -f ./k8s/roles.yml
+```
+
 == Apply config-watcher.yml
 
 https://hub.docker.com/r/springcloud/spring-cloud-kubernetes-configuration-watcher
