--- a/kubernetes-workshops.adoc
+++ b/kubernetes-workshops.adoc
@@ -33,7 +33,15 @@ $ docker push springcloud/spring-loves-k8s
 == Run image
 
 ```
-$ docker run docker.io/springcloud/spring-loves-k8s -p 8080:8080
+$ docker run -p 8080:8080 docker.io/springcloud/spring-loves-k8s
+```
+
+=== [OPTIONAL] Show k8s actuator endpoints
+
+```
+$ http :8080/actuator/health
+$ http :8080/actuator/health/liveness
+$ http :8080/actuator/health/readiness
 ```
 
 == Point kubectl to proper namespace
